--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<p class="pargraph author"> 
 						<span class="black bold">toams eggsy</span>
 						-	
-						<span class="italic">ahmed abdel harith</span>
+						<span class="italic">ahmed abdel harith mohamed</span>
 						</p>
 					<a href="#" class="btn standard-btn">standard </a>
 				</div>
